--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity
             android:name=".OfferActivity"
             android:label="@string/title_activity_offer"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ShopkeeperActivity" />
+        <activity android:name=".EbillPaymentActivity"></activity>
     </application>
 
 </manifest>
