--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,11 @@
             android:label="@string/title_activity_offer"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ShopkeeperActivity" />
-        <activity android:name=".EbillPaymentActivity"></activity>
+        <activity android:name=".EbillPaymentActivity" />
+        <activity
+            android:name=".ThankYouActivity"
+            android:label="@string/title_activity_thank_you"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
