--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity
             android:name=".ThankYouActivity"
             android:label="@string/title_activity_thank_you"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ShopkeeperPassword"></activity>
     </application>
 
 </manifest>
